# walmart-goback-backend

./: .env  .gitignore  Cargo.toml  Makefile  README.md  db_dev.sqlite3  db_dev.sqlite3-shm  db_dev.sqlite3-wal
migrations/: 20240106071505_added_items.up.sql  20240131101032_new_column_items_isCold.down.sql  20240131101032_new_column_items_isCold.up.sql
src/: app_error.rs  lib.rs  main.rs  server.rs  state.rs
src/cart/: get.rs  mod.rs  post.rs
src/cart/_id/: delete.rs  get.rs  mod.rs  post.rs
